# ECS

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  InputManager.cpp  InputManager.h
src/ecs/: ComponentManager.h  ECS.h  EntityManager.cpp  EntityManager.h  Signature.h  System.h  SystemManager.h
src/ecs/components/: Position.h  Sprite.h  Velocity.h
src/ecs/systems/: MovementSystem.h  PlayerController.h  RenderSystem.h
src/scenes/: Prefab.h  Scene.h  SceneManager.cpp  SceneManager.h
src/scenes/game/: TestingScene.h
src/scenes/game/prefabs/: Player.h
src/textures/: TextureManager.cpp  TextureManager.h
